--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,92 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: martians;
+    src: url(assets/fonts/MartianGroteskTRIAL-CnBl.ttf) format("opentype");
+  }
+  @font-face {
+    font-family: Rubic;
+    src: url(assets/fonts/Rubik-Black.ttf) format("opentype");
+  }
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  font-family: Rubic, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.card {
+    background-color: #fafdfd;
+    box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+    border-radius: 7px;
+}
+
+button {
+    display: inline-block;
+    height: 50px;
+    color: #ffffff;
+    font-family: Rubic;
+    font-weight: 600;
+    text-decoration: none;
+    user-select: none;
+    padding: .25em .5em;
+    outline: none;
+    border-radius: 7px;
+    background: rgb(27,26,28);    
+    transition: box-shadow .2s, border-color .2s;
+    &:hover {
+        box-shadow: inset 0 -1px 1px rgba(0,0,0,0), inset 0 1px 2px rgba(0,0,0,0), inset 0 0 0 60px #524991;
+    };
+    &:active {
+        box-shadow: inset 0 -1px 1px rgba(0,0,0,.1), inset 0 1px 2px rgba(0,0,0,.3), inset 0 0 0 60px #4f4c64;
+    }
+    &:disabled {
+        background-color: gray;
+        &:hover {
+            box-shadow: none;
+        }
+    }
+} 
+
+  .simple-button {
+    background-color: #ffffff;
+    border-color: black;
+    color: black;
+  }
+
+  input {
+    box-sizing: border-box;
+    padding: 4px;
+    border: black 2px solid;
+    border-radius: 5px;
+    height: 40px;
+    &:focus-visible {
+        border: #8e9733 4px solid;
+        outline-width: 0;
+    }
+  }  
+
+  .w-100 {
+    width: 100%;
+  }
+
+  .mr-b-20 {
+    margin-bottom: 20px;
+  }
+
+  .mr-b-10 {
+    margin-bottom: 10px;
+  }
+
+  .mr-r-10 {
+    margin-right: 10px;
+  }
+
+  .alert-danger {
+    font-size: 12px;
+    color: #c21d1d;
+  }
