fix address for images

--- a/src/app/modules/auth/auth.component.html
+++ b/src/app/modules/auth/auth.component.html
@@ -6,11 +6,11 @@
 
 <div class="content-wrapper">
   <div class="evil-martians">
-    <img src="../../../assets/Virus-PNG-Background-Image.png"
+    <img src="assets/Virus-PNG-Background-Image.png"
        alt="martians1"
        class="images image2"
     />
-    <img src="../../../assets/Virus-PNG-High-Quality-Image.png"
+    <img src="assets/Virus-PNG-High-Quality-Image.png"
       alt="martians1"
       class="images image1"
     />
